compiler/tools/fpp-check/test/component/undef_constant.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/component/undef_constant.fpp:2.16
  constant b = a
               ^
error: cannot find constant `a` in this scope
